--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <!--<img class="profile" src="assets/images/ashiwan_round_150.png" alt="" />-->
-                <img class="profile" src="assets/images/circle_cropped.png" alt="" />
+                <img class="profile" src="assets/images/circle-cropped.png" alt="" />
                 <h1 class="name">Ashiwan Sivakumar</h1>
                 <h3 class="tagline">Computer networking and systems researcher -
 Mobile Web;
-Networking Application Latency; User Experience in Cellular networks; CDNs; Cloud computing; 
+Networking Application Latency; Cellular networks; CDNs; Cloud computing; 
 
 </h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="address"><i class="fa fa-address-card"></i><p> Carnegie Mellon School of Computer Science. 5000 Forbes Avenue, Pittsburgh, PA 15219. </p></li>
-                   <li class="email"><i class="fa fa-envelope"></i><a href="mailto: asivakum@cs.cmu.edu">Academic email</a></li>
+                    <li class="address"><i class="fa fa-address-card"></i><p> 4D117L. 1 AT&T way, Bedminster, NJ 07921. </p></li>
+                   <li class="email"><i class="fa fa-envelope"></i><a href="mailto: ashiwan@research.att.com">Work email</a></li>
                     <li class="skype"><i class="fa fa-skype"></i> <a href="skype:ashiwan7?call">SkypeCall</a></li>
                     <!--
                      <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
@@ -85,8 +85,8 @@ Networking Application Latency; User Experience in Cellular networks; CDNs; Clou
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
                 <div class="summary">
-                    <p>I'm a post doctoral fellow in the Carnegie Mellon School of Computer Science. Previously I graduated with a Ph.D. from Purdue University and I was part of the <a href="https://engineering.purdue.edu/~isl/people.htm" target="_blank" style="color: #6B8E23" >Internet Systems Lab</a> led by <a href="https://engineering.purdue.edu/~sanjay/" target=_blank" style="color: #6B8E23">Prof.Sanjay Rao</a>. My research interests are broadly in Computer Networking and Systems, specifically Mobile Web, Cellular Networks, CDNs and Cloud Computing. 
-Prior to joining Purdue, I worked for 3 years as a software development engineer in <a href="http://www.cisco.com/c/en_in/about/company-overview.html" target="_blank" style="color: #6B8E23" > Cisco Systems, India</a>. I received a bachelors degree in Electrical Engineering from Anna University <a href="http://www.mitindia.edu/en/" target="_blank" style="color: #6B8E23" > (Madras Institute of Technology campus)</a>, Chennai, India. 
+                    <p>I'm a senior inventive scientist at AT&T Labs in the Networking and Service Quality Management team. Prior to this, I was a post doctoral fellow in the Carnegie Mellon School of Computer Science. Previously I graduated with a Ph.D. from Purdue University and I was part of the <a href="https://engineering.purdue.edu/~isl/people.htm" target="_blank" style="color: #6B8E23" >Internet Systems Lab</a> led by <a href="https://engineering.purdue.edu/~sanjay/" target=_blank" style="color: #6B8E23">Prof.Sanjay Rao</a>. My research interests are broadly in Computer Networking and Systems, specifically Mobile Web, Cellular Networks, CDNs and Cloud Computing. 
+Prior to joining Purdue, I worked as a software development engineer in <a href="http://www.cisco.com/c/en_in/about/company-overview.html" target="_blank" style="color: #6B8E23" > Cisco Systems, India</a>. I received a bachelors degree in Electrical Engineering from Anna University <a href="http://www.mitindia.edu/en/" target="_blank" style="color: #6B8E23" > (Madras Institute of Technology campus)</a>, Chennai, India. 
 I have interned in <a href="http://www.research.att.com/" target="_blank" style="color: #6B8E23" >AT&T Labs - Research</a> thrice during Ph.D.
 </p>
                 <ul class="list-unstyled material-list">
